@@ -185,8 +185,8 @@ int ExecutiveColor(PyMOLGlobals *G,char *name,char *color,int flags,int quiet);
 int ExecutiveInit(PyMOLGlobals *G);
 void ExecutiveFree(PyMOLGlobals *G);
 int ExecutivePop(PyMOLGlobals *G,char *target,char *source,int quiet);
-void ExecutiveManageObject(PyMOLGlobals *G,struct CObject *obj,int allow_zoom,int quiet);
-void ExecutiveUpdateObjectSelection(PyMOLGlobals *G,struct CObject *obj);
+void ExecutiveManageObject(PyMOLGlobals *G,CObject *obj,int allow_zoom,int quiet);
+void ExecutiveUpdateObjectSelection(PyMOLGlobals *G,CObject *obj);
 void ExecutiveManageSelection(PyMOLGlobals *G,char *name);
 Block *ExecutiveGetBlock(PyMOLGlobals *G);
 CObject *ExecutiveFindObjectByName(PyMOLGlobals *G,char *name);
